# EpiFire

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTES.md  README
epidemics4-ms/: manuscript.md
examples/: EX1_mass_action.cpp  Makefile  Rplotting_from_layout.R  dynamic_network_edge_distros.cpp  ex1_mass_action.cpp  ex2_percolation.cpp  ex3_chain_binomial.cpp  ex4_dynamic_net.cpp  ex5_diff_eq.cpp  ex6_network_diff_eq.cpp  ex7_gillespie_network_SEIRS.cpp  ex8_event_driven_SEIRS.cpp  main.cpp  main_sacema60k.cpp  main_sacema75k.cpp  mod_ex7_gillespie_network_SEIRS.cpp  path_length_test.cpp  run_dynamic_network_sims.sh  test_network.cpp
experiment/: RPlot.h
gsl_subset/: Makefile  config.h
gui/: .gitignore  ForceLayout.cpp  ForceLayout.h  Quadtree.h  analysisDialog.cpp  analysisDialog.h  backgroundthread.cpp  backgroundthread.h  codeeditor.cpp  codeeditor.h  debug.cpp  debug.h  dialog.cpp  dialog.h  edge.cpp  edge.h  epifire.pri  epifire.pro  graphwidget.cpp  graphwidget.h  guiSim.cpp  gui_sim.cpp  gui_sim.h  histogram.cpp  histogram.h  main.cpp  mainWindow.cpp  mainWindow.h  node.cpp  node.h  osx_lib_reconfig.sh  plotArea.cpp  plotArea.h  plotAxes.cpp  plotAxes.h  plotAxis.cpp  plotAxis.h  plotPoint.cpp  plotPoint.h  plotRegion.cpp  (+10 more)
install/: builddmg.sh
research/: .gitignore  MSMS_Sim.h  Makefile  SEIR_Percolation_Sim.h  msms_simulator.cpp  tmp_research.cpp
src/: .gitignore  ChainBinomial_Sim.h  Deterministic_Network_SIR_Sim.h  DiffEq_Sim.h  Gillespie_MassAction_Sim.h  Gillespie_Network_SEIRS_Sim.h  Makefile  MakefileMPI  MassAction_Sim.h  MersenneTwister.h  (+9 more)
(+150 files in other folders)
